#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
CR-2009-10-21-0: Bugfix:     o updated adoc header for set_config()
                             o fixed auto_reschedule test for GE 61 version
                 Belongs to: CR-2009-08-10-0
                 Review:     SH

RH-2009-10-20-0: Enhancem.:  o Basic test for simhost cloud adapter added
                             o get_resource_info considers resource_ids
                             o wait_for_resource_info: pool interval depends
                               on remaining time until timeout
                               reduced output
                             o New helper method:
                                - remove_from_list: remove elem from list
                                - hedeby_remove_service
                                - hedeby_add_resources_to_service
                                - hedeby_move_resources
                                - hedeby_remove_resources
                                - hedeby_change_sge_root_in_ge_service 
                 Bugfix:     Fix of issue 685 broken several vi sequences
              
AP-2009-10-19-0: Bugfix:     Manual tests adjustment.
                 Review:     LP

CR-2009-10-19-0: Bugfix:     Fixed possible TCL error when automatic shadowd
                             installation fails
                 Belongs to: CR-2009-10-12-0
                 Review:     AP

CR-2009-10-16-2: Bugfix:     fixed 2136 check
                 Review:     TBD

CR-2009-10-16-1: Bugfix:     o Arco junit test was running on java build host
                             o Added some logging to the arco junit test