@@ -6,6 +6,10 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
+CR-2009-10-21-1: Enhancem.:  o modified drmaaj test to run all checklevels even
+                               when one check level reports an error
+                 Review:     JG
+
 CR-2009-10-21-0: Bugfix:     o updated adoc header for set_config()
                              o fixed auto_reschedule test for GE 61 version
                  Belongs to: CR-2009-08-10-0
